# TypeNarrowingAgent

./: .env  .gitignore  LICENSE  README.md  agent.py  pyproject.toml
agent/: cli.py  prompt.py  utils.py
